[package]
name = "wasm-sandpile"
publish = false
version = "0.2.0"
authors = ["Ritesh Sinha <ritsinha@amazon.co.uk>"]
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# Wasm-opt breaks
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.9.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
array2d = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
